<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <net.bingyan.coverit.widget.TitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/titleBar"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/title_hint"
        android:maxLength="5"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textSize="16sp" />
</LinearLayout>



