<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <net.bingyan.coverit.widget.TitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/titleBar"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:text="@string/btn_submit"
            android:textSize="16sp"/>
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_white"
        tools:context="net.bingyan.coverit.ui.reciteother.FeedBackActivity">

        <EditText
            android:id="@+id/et_suggestion"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            android:inputType="textMultiLine"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/hint"
            android:maxLines="10"
            android:padding="5dp"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:maxLines="2"
            android:background="@color/white"
            android:hint="@string/hint_call"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_suggestion"
            app:layout_constraintVertical_bias="0.036" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>


