<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="15dp"
    android:src="@color/grey"
    android:contentDescription="grey" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:id="@+id/feed_back"
            android:background="@drawable/select_mine"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/feedback"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/noto_sans"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/feedback"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:id="@+id/get_data"
            android:background="@drawable/select_mine"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/date"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/noto_sans"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/date"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:id="@+id/score"
            android:background="@drawable/select_mine"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/score"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/noto_sans"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/score"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:id="@+id/about"
            android:background="@drawable/select_mine"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/about"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/noto_sans"
                android:textSize="16sp"
                android:textColor="#000"
                android:text="@string/about"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey" />

</LinearLayout>