<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/text_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/text_guide"
        android:scaleType="centerCrop"
        android:src="@drawable/text_guide"
        android:visibility="gone" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <net.bingyan.coverit.widget.TitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/titleBar"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:text="@string/btn_save"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/modify_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="start"
        android:hint="@string/title_hint"
        android:inputType="text"
        android:textStyle="bold"
        android:maxLines="1"
        android:textColor="#363742"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <net.bingyan.coverit.widget.ModifyTextView
        android:id="@+id/modify_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:hint="请输入正文"
        android:overScrollMode="never"
        android:paddingEnd="19dp"
        android:paddingStart="19dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:scrollbarStyle="insideInset"
        android:textSize="14sp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_text"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#fafafa"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/write_button"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginEnd="66dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/write_selector"
            android:button="@null"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/modify_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/modify_button"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="66dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/modify_selector"
            android:button="@null"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/see_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/write_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/see_button"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="66dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/see_selector"
            android:button="@null"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switch_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/modify_button"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/switch_button"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/switch_selector"
            android:button="@null"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/see_button"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>
